tests/baselines/reference/asyncAwaitWithCapturedBlockScopeVar(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
asyncAwaitWithCapturedBlockScopeVar.ts(27,23): error TS2366: Function lacks ending return statement and return type does not include 'undefined'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== asyncAwaitWithCapturedBlockScopeVar.ts (1 errors) ====
    async function fn1() {
        let ar = [];
        for (let i = 0; i < 1; i++) {
            await 1;
            ar.push(() => i);
        }
    }
    
    async function fn2() {
        let ar = [];
        for (let i = 0; i < 1; i++) {
            await 1;
            ar.push(() => i);
            break;
        }
    }
    
    async function fn3() {
        let ar = [];
        for (let i = 0; i < 1; i++) {
            await 1;
            ar.push(() => i);
            continue;
        }
    }
    
    async function fn4(): Promise<number> {
                          ~~~~~~~~~~~~~~~
!!! error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
        let ar = [];
        for (let i = 0; i < 1; i++) {
            await 1;
            ar.push(() => i);
            return 1;
        }
    }
    